# maelstrom-staging

./: .gitignore  .gitmodules  CanonicalGPCoevolution.ipynb  CanonicalIslandCoevolution.ipynb  IndividualSaving.ipynb  IslandCoevolution.ipynb  LocalChampionAnalysis.ipynb  MaelstromCoevolution.ipynb  Pipfile  Plotting.ipynb  PredatorEvolution.ipynb  PreyEvolution.ipynb  README.md  StatisticalAnalysis.ipynb  canonicalGPIsland.py  canonicalPopulation.py  competition.py  driver.py  env-maelstrom.txt  findChampions.py  genotype.py  globalPerformanceEstimation.py  individual.py  island.py  maelstrom.py  population.py  primitives.py  pyproject.toml  run.sh  unorderedWrapper.py
PredatorPrey/: world.py
configs/: TestMaelstrom.cfg  TestTraditional.cfg  default.cfg  generational100large.cfg  generational100small.cfg  generational50.cfg  maelstrom.cfg  maelstromBestMigration.cfg  maelstromGenerational.cfg  maelstromLowSampleLowPeriodBestMigrants.cfg  maelstromRandomMigration.cfg  nurseryMaelstrom.cfg  nurseryOnly.cfg  steadystateLowSampleNoHoF.cfg  traditionalLargePop.cfg
configs/validation/: generational100_1000.cfg  generational100_200.cfg  generational50_500.cfg  maelstromBaseline.cfg  maelstromBestMigration.cfg  maelstromGenerational.cfg  maelstromHighPeriod.cfg  maelstromLowPeriod.cfg  maelstromLowPeriodLowSample.cfg  maelstromLowSampleLowPeriodBestMigrants.cfg  maelstromRandomMigration.cfg  steadystate600_300.cfg  steadystateBaseline.cfg  steadystateHighSample.cfg  steadystateLowSample.cfg  (+2 more)
maelstrom/: __init__.py  genotype.py  individual.py  island.py  population.py
