[tool.poetry]
name = "maelstrom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.1.0"
[tool.pylint.messages_control]
disable = ["too-many-instance-attributes", "too-many-arguments"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
